--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
 	text-align: center;
 	padding: 0 0 50px 0;
 }
+#logo {
+  max-width: 300px;
+}
 h1 {
 	font-weight: 300;
 	font-size: 3.5em;
